--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,17 +6,14 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3> Does Noodle Have Bones Today? </h3>
+    <p>Simple website providing daily status updates with whether or not <a href="https://www.youtube.com/watch?v=QLsnGBG2_eA">Noodle has bones today</a></p>
+    <a class="project-link" href="https://www.doesnoodlehavebonestoday.com/">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="Old pug" src="{{ "https://d279m997dpfwgl.cloudfront.net/wp/2021/10/image-e1635177694631-1000x710.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Project Title </h3>
