resize noodle image

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/noodle.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Does Noodle Have Bones Today? </h3>
@@ -13,7 +13,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="Old pug" src="{{ "https://d279m997dpfwgl.cloudfront.net/wp/2021/10/image-e1635177694631-1000x710.png" | prepend: site.baseurl }}" />
+    <img alt="test" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Project Title </h3>
