--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="MAILTO:KVKAMPF@GMAIL.COM"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/hardworkingpm"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
+        <a aria-label="Send email" href="mailto: KVKAMPF@GMAIL.COM"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Twitter" target="_blank" href="https://twitter.com/hardworkingpm"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/kkampf/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My GitHub" target="_blank" href="https://github.com/acrokat"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
