--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,9 @@
   <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+
+  <!---Headshot as site icon-->
+  <link rel="shortcut icon" href="noodle-icon.ico">
+  <link rel="apple-touch-icon" href="noodle-card.png">
+  
 </head>
