--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 
   <!---Headshot as site icon-->
-  <link rel="shortcut icon" href="../assets/img/headsho.png"t>
+  <link rel="shortcut icon" href="../assets/img/headshot.png">
   <link rel="apple-touch-icon" href="../assets/img/headsho.png">
   
 </head>
