test out carousel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
       <section id="about">
         {% include about.html %}
       </section>
+      <section id="work">
+        {% include carousel.html height="50" unit="%" duration="7" number="1" %}
+        {% include carousel.html height="50" unit="%" duration="7" number="2" %}
+      </section>
       <section id="projects">
         {% include projects.html %}
       </section>
