write section headers

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,27 +4,25 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
+      <h2>Work</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
+        while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
+        Jupyter Notebooks, and now educational tools for teaching CS at GitHub.
+        During my time, I've had the oppurtunity to present at multiple conferences, lead a product from its inception to first 1000,000 users,
+         and constantly learn.
+      </p>
     </div>
-    <div class="tech">
-      <h2>Code</h2>
+    <div class="Hobbies">
+      <h2>Life Passions</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>
+        Outside of tech, I love to do all the classic Pacific Northwest things: skiing, hiking, photography, exploring breweries, and fosteirng dogs.
+        I am also an avid sports fan, with particular loves for Cleveland sports and the University of Michigan (Go Blue!).
+      </p>
     </div>
 </div>
