--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,9 @@
   <div class="user">
     <div class="tech">
       <h2>Work</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
+      <i class="devicon-github"></i>
+      <i class="devicon-azure"></i>
+      <i class="devicon-jupyter"></i>
       <p>I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
         while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
         Jupyter Notebooks, and now educational tools for teaching CS at GitHub.
@@ -17,11 +17,12 @@
     </div>
     <div class="Hobbies">
       <h2>Life Passions</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
+      <i class="devicon-mountain"></i>
+      <i class="devicon-dog"></i>
+      <i class="devicon-skiing"></i>
       <p>
-        Outside of tech, I love to do all the classic Pacific Northwest things: skiing, hiking, photography, exploring breweries, and fosteirng dogs.
+        Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. I love being active with skiing, hiking, running. Being creative with photography 
+        and improv. And of course being cultured and exploring breweries 😀. I also foster dogs and cats, and am hoping to adopt one of my own this year!
         I am also an avid sports fan, with particular loves for Cleveland sports and the University of Michigan (Go Blue!).
       </p>
     </div>
