--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,8 +5,8 @@
   <div class="user">
     <div class="tech">
       <h2>Work</h2>
-      <i class="devicon-github"></i>
-      <i class="devicon-azure"></i>
+      <i class="icon fa fa-github"></i>
+      <i class="icon fa fa-github-alt devicon-azure"></i>
       <i class="devicon-jupyter"></i>
       <p>I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
         while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
