--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,9 +17,9 @@
     </div>
     <div class="Hobbies">
       <h2>Life Passions</h2>
-      <i class="devicon-mountain"></i>
-      <i class="devicon-dog"></i>
-      <i class="devicon-skiing"></i>
+      <i class="icon fa fa-mountain"></i>
+      <i class="icon fa fa-dog"></i>
+      <i class="icon fa fa-skiing"></i>
       <p>
         Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. I love being active with skiing, hiking, running. Being creative with photography 
         and improv. And of course being cultured and exploring breweries 😀. I also foster dogs and cats, and am hoping to adopt one of my own this year!
