add more FA icons

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,7 @@
   <!---Headshot as site icon-->
   <link rel="shortcut icon" href="../assets/img/headshot.png">
   <link rel="apple-touch-icon" href="../assets/img/headsho.png">
+
+  <script src="https://kit.fontawesome.com/a920ebe359.js" crossorigin="anonymous"></script>
   
 </head>
