--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,11 +3,12 @@
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
+    <script src="https://kit.fontawesome.com/a920ebe359.js" crossorigin="anonymous"></script>
     <div class="tech">
       <h2>Work</h2>
-      <i class="icon fa fa-github"></i>
+      <i class="devicon-github-origina"></i>
       <i class="icon fa fa-github-alt devicon-azure"></i>
-      <i class="devicon-jupyter"></i>
+      <i class="devicon-python-plain-wordmark"></i>
       <p>I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
         while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
         Jupyter Notebooks, and now educational tools for teaching CS at GitHub.
@@ -17,6 +18,7 @@
     </div>
     <div class="Hobbies">
       <h2>Life Passions</h2>
+      <i class="fas fa-camera"></i> 
       <i class="icon fa fa-mountain"></i>
       <i class="icon fa fa-dog"></i>
       <i class="icon fa fa-skiing"></i>
