update icons part 512

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
     <div class="tech">
       <h2>Work</h2>
       <i class="devicon-github-origina"></i>
-      <i class="icon fa fa-github-alt devicon-azure"></i>
+      <i class="fas fa-cloud"></i>
       <i class="devicon-python-plain-wordmark"></i>
       <p>I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
         while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
@@ -18,10 +18,9 @@
     </div>
     <div class="Hobbies">
       <h2>Life Passions</h2>
-      <i class="fas fa-camera"></i> 
-      <i class="icon fa fa-mountain"></i>
-      <i class="icon fa fa-dog"></i>
-      <i class="icon fa fa-skiing"></i>
+      <i class="fas fa-mountain"></i>
+      <i class="fas fa-paw"></i>
+      <i class="fas fa-skiing"></i>
       <p>
         Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. I love being active with skiing, hiking, running. Being creative with photography 
         and improv. And of course being cultured and exploring breweries 😀. I also foster dogs and cats, and am hoping to adopt one of my own this year!
