--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,10 +6,11 @@
     <script src="https://kit.fontawesome.com/a920ebe359.js" crossorigin="anonymous"></script>
     <div class="tech">
       <h2>Work</h2>
-      <i class="devicon-github-origina"></i>
+      <i class="fab fa-github"></i>
       <i class="fas fa-cloud"></i>
       <i class="devicon-python-plain-wordmark"></i>
-      <p>I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
+      <p>
+        I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
         while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
         Jupyter Notebooks, and now educational tools for teaching CS at GitHub.
         During my time, I've had the oppurtunity to present at multiple conferences, lead a product from its inception to first 1000,000 users,
