--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,7 +23,7 @@
       <i class="fas fa-mountain"></i>
       <i class="fas fa-skiing"></i>
       <p>
-        Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. I love being active with skiing, hiking, running. Being creative with photography 
+        <ln> </ln>Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. I love being active with skiing, hiking, running. Being creative with photography 
         and improv. And of course being cultured and exploring breweries 😀. I also foster dogs and cats, and am hoping to adopt one of my own this year!
         I am also an avid sports fan, with particular loves for Cleveland sports and the University of Michigan (Go Blue!).
       </p>
