--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,14 @@
  <div class="user-details">
-  <h1> About </h1>
+  <h1> Who me? </h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
     <script src="https://kit.fontawesome.com/a920ebe359.js" crossorigin="anonymous"></script>
     <div class="tech">
-      <h2>Work</h2>
+      <h2>Career 👩‍💻</h2>
       <i class="fab fa-github"></i>
       <i class="fas fa-cloud"></i>
-      <i class="devicon-python-plain-wordmark"></i>
+      <i class="fab fa-python"></i>
       <p>
         I started my Product Management journey back in 2016 as an intern at Microsoft, falling in love with the impact of tech on its end users
         while studying CS in college. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
@@ -18,14 +18,14 @@
       </p>
     </div>
     <div class="Hobbies">
-      <h2>Life Passions</h2>
+      <h2>For fun ✨</h2>
       <i class="fas fa-paw"></i>
       <i class="fas fa-mountain"></i>
-      <i class="fas fa-skiing"></i>
+      <i class="fas fa-gamepad"></i>
       <p>
-        <ln> </ln>Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. I love being active with skiing, hiking, running. Being creative with photography 
-        and improv. And of course being cultured and exploring breweries 😀. I also foster dogs and cats, and am hoping to adopt one of my own this year!
-        I am also an avid sports fan, with particular loves for Cleveland sports and the University of Michigan (Go Blue!).
+        Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. Getting outside with skiing, hiking, and soccer. Being creative with photography 
+        and improv. And of course being cultured and exploring breweries 😀. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
+        And as a Cleveland native and UMich alum, I would be remiss if I didn't mention my love of the Cleveland Browns and Michigan football.
       </p>
     </div>
 </div>
