update featured work and projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,25 +2,28 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="test" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Talks and such </h3>
+    <ul>
+      <li> <a href="https://www.youtube.com/watch?v=HhZOe2bJPOo">GitHub Universe: GitHub Classroom 101</a></li>
+      <li> <a href="https://www.youtube.com/watch?v=YlIDlpspvVU&t=3s">EuroPython: Building a Powerful Pet Detector in Notebooks</a></li>
+      <li> <a href="https://talkpython.fm/episodes/show/217/notebooks-vs-data-science-enabled-scripts">TalkPython Podcast: Notebooks vs. Scripts</a></li>
+      <li> <a href="https://www.youtube.com/watch?v=nTKQuZfpT-Y">Introducing ML Services 9.3 in Azure HDInsight/a></li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <a class="project-link" href="#">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/noodle.png" | prepend: site.baseurl }}" />
+    <img alt="pug sleeping" src="{{ "/assets/img/noodle.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Does Noodle Have Bones Today? </h3>
     <p>Simple website providing daily status updates with whether or not <a href="https://www.youtube.com/watch?v=QLsnGBG2_eA">Noodle has bones today</a></p>
     <a class="project-link" href="https://www.doesnoodlehavebonestoday.com/">Check it out</a>
-  </div>
-</div>
-<div class="user-projects">
-  <div class="images-left">
-    <img alt="test" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
