clean up img assets, update imgs for projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="test" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="test" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Talks and such </h3>
@@ -13,8 +13,6 @@
       <li> <a href="https://talkpython.fm/episodes/show/217/notebooks-vs-data-science-enabled-scripts">TalkPython Podcast: Notebooks vs. Scripts</a></li>
       <li> <a href="https://www.youtube.com/watch?v=nTKQuZfpT-Y">Introducing ML Services 9.3 in Azure HDInsight/a></li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -22,7 +20,7 @@
     <img alt="pug sleeping" src="{{ "/assets/img/noodle.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Does Noodle Have Bones Today? </h3>
+    <h3> Does Noodle have bones today? </h3>
     <p>Simple website providing daily status updates with whether or not <a href="https://www.youtube.com/watch?v=QLsnGBG2_eA">Noodle has bones today</a></p>
     <a class="project-link" href="https://www.doesnoodlehavebonestoday.com/">Check it out</a>
   </div>
