update noodle photo to no bg

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="pug sleeping" src="{{ "/assets/img/noodle.png" | prepend: site.baseurl }}" />
+    <img alt="pug sleeping" src="{{ "/assets/img/noodle-nobg.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Does Noodle have bones today? </h3>
