resize proj images

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="test" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" />
+    <img alt="Bitmoji holding briefcase" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" width="150" height="150" />
   </div>
   <div class="contents-right">
     <h3> Talks and such </h3>
@@ -11,13 +11,13 @@
       <li> <a href="https://www.youtube.com/watch?v=HhZOe2bJPOo">GitHub Universe: GitHub Classroom 101</a></li>
       <li> <a href="https://www.youtube.com/watch?v=YlIDlpspvVU&t=3s">EuroPython: Building a Powerful Pet Detector in Notebooks</a></li>
       <li> <a href="https://talkpython.fm/episodes/show/217/notebooks-vs-data-science-enabled-scripts">TalkPython Podcast: Notebooks vs. Scripts</a></li>
-      <li> <a href="https://www.youtube.com/watch?v=nTKQuZfpT-Y">Introducing ML Services 9.3 in Azure HDInsight/a></li>
+      <li> <a href="https://www.youtube.com/watch?v=nTKQuZfpT-Y">Introducing ML Services 9.3 in Azure HDInsight</a></li>
     </ul>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="pug sleeping" src="{{ "/assets/img/noodle-nobg.png" | prepend: site.baseurl }}" />
+    <img alt="pug sleeping" src="{{ "/assets/img/noodle-nobg.png" | prepend: site.baseurl }}" width="150" height="150" />
   </div>
   <div class="contents">
     <h3> Does Noodle have bones today? </h3>
