revert github icon change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <a aria-label="Send email" href="mailto: KVKAMPF@GMAIL.COM"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/hardworkingpm"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="LinkedIn" target="_blank" href="https://www.linkedin.com/in/kkampf/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-        <a aria-label="My GitHub" target="_blank" href="https://github.com/acrokat"><i class="fab fa-github"></i></i></a>
+        <a aria-label="My GitHub" target="_blank" href="https://github.com/acrokat"><i class="icon fa fa-github" aria-hidden="true"></i></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About</a>
