--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -57,12 +57,12 @@
 
 .images-left {
   @media only screen and (min-width: $cut) {
-    float: left;
+    float: center;
     width: 48%;
   }
   img {
     @media only screen and (min-width: $cut) {
-      float: left;
+      float: center;
     }
   }
 }
