who knows maybe

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,9 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <img alt="Bitmoji holding briefcase" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" width="150" height="150" />
+  <div class="images-center">
+    <img alt="Bitmoji holding briefcase" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" width="150" height="150" />
+  </div>
   <div class="contents-right">
     <h3> Talks and such </h3>
     <ul>
@@ -14,10 +16,10 @@
   </div>
 </div>
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-center">
     <img alt="pug sleeping" src="{{ "/assets/img/noodle-nobg.png" | prepend: site.baseurl }}" width="150" height="150" />
   </div>
-  <div class="contents">
+  <div class="contents-right">
     <h3> Does Noodle have bones today? </h3>
     <p>Simple website providing daily status updates with whether or not <a href="https://www.youtube.com/watch?v=QLsnGBG2_eA">Noodle has bones today</a></p>
     <a class="project-link" href="https://www.doesnoodlehavebonestoday.com/">Check it out</a>
