--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images-center">
+  <div class="images-left">
     <img alt="Bitmoji holding briefcase" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" width="150" height="150" />
   </div>
   <div class="contents-right">
@@ -16,7 +16,7 @@
   </div>
 </div>
 <div class="user-projects">
-  <div class="images-center">
+  <div class="images-left">
     <img alt="pug sleeping" src="{{ "/assets/img/noodle-nobg.png" | prepend: site.baseurl }}" width="150" height="150" />
   </div>
   <div class="contents-right">
