--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -16,10 +16,10 @@
   </div>
 </div>
 <div class="user-projects">
-  <div class="images-left">
+  <div class="images-right">
     <img alt="pug sleeping" src="{{ "/assets/img/noodle-nobg.png" | prepend: site.baseurl }}" width="150" height="150" />
   </div>
-  <div class="contents-right">
+  <div class="contents">
     <h3> Does Noodle have bones today? </h3>
     <p>Simple website providing daily status updates with whether or not <a href="https://www.youtube.com/watch?v=QLsnGBG2_eA">Noodle has bones today</a></p>
     <a class="project-link" href="https://www.doesnoodlehavebonestoday.com/">Check it out</a>
