remove emoji for spacing

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,7 @@
       <i class="fas fa-gamepad"></i>
       <p>
         Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. Getting outside with skiing, hiking, and soccer. Being creative with photography 
-        and improv. And of course being cultured and exploring breweries 😀. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
+        and improv. And of course being cultured and exploring breweries. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
         And as a Cleveland native and UMich alum, I would be remiss if I didn't mention my love of the Cleveland Browns and Michigan football.
       </p>
     </div>
