--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,12 +10,11 @@
       <i class="fas fa-cloud"></i>
       <i class="fab fa-python"></i>
       <p>
-        After falling in love with the impact of tech on its end users while studying CS in college, I started my Product Management journey
-         back in 2016 as an intern at Microsoft. I've since worked in various areas of the company, working on Big Data platforms for Azure, Python tools, 
-        Jupyter Notebooks, and now educational tools for teaching CS at GitHub.
-        Over the past five years, I've had the oppurtunity to present at multiple conferences, lead a product from its inception to first 1000,000 users,
-        and constantly learn and challenge myself. My love for tech was born from its ability to conenct and empower people all over the globe 
-        and I strive to enable those connections.
+        After falling in love with the impact of tech on its end users while studying CS in college, I started my Product Management 
+        journey back in 2016 as an intern at Microsoft. I've since worked in various areas of the company, working on Big Data platforms 
+        for Azure, Python tools, Jupyter Notebooks, and now educational tools for teaching CS at GitHub. Over the past five years, I've 
+        had the opportunity to present at multiple conferences, lead a product from its inception to first 1000,000 users, and constantly 
+        learn and challenge myself.
       </p>
     </div>
     <div class="Hobbies">
@@ -25,8 +24,8 @@
       <i class="fas fa-gamepad"></i>
       <p>
         Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. Getting outside with skiing, hiking, and soccer. Being creative with photography 
-        and improv. And of course being cultured and exploring breweries. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
-        And finally, as a Cleveland native and UMich alum, I would be remiss if I didn't mention my love of the Cleveland Browns and Michigan football.
+        and improv. And of course, getting Seattle-cultured by exploring breweries. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
+        And finally, as a Cleveland native and UMich alum, I would be remiss if I didn't mention my love of the Cleveland Browns and Michigan football (Go Blue!).
       </p>
     </div>
 </div>
