--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@
     <img alt="Bitmoji holding briefcase" src="{{ "/assets/img/bitmoji.png" | prepend: site.baseurl }}" width="250" height="250" />
   </div>
   <div class="contents-right">
-    <h3> Talks and such </h3>
+    <h3> Conference talks </h3>
     <ul>
       <li> <a href="https://www.youtube.com/watch?v=HhZOe2bJPOo">GitHub Universe: GitHub Classroom 101</a></li>
       <li> <a href="https://www.youtube.com/watch?v=YlIDlpspvVU&t=3s">EuroPython: Building a Powerful Pet Detector in Notebooks</a></li>
