fix class forhobbies section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
         learn and challenge myself.
       </p>
     </div>
-    <div class="Hobbies">
+    <div class="user">
       <h2>For fun ✨</h2>
       <i class="fas fa-paw"></i>
       <i class="fas fa-mountain"></i>
