--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,11 +10,11 @@
       <i class="fas fa-cloud"></i>
       <i class="fab fa-python"></i>
       <p>
-        After falling in love with the impact of tech on its end users while studying CS in college, I started my Product Management 
+        After realizing my passion for the end-user impact of tech while studying CS in college, I started my Product Management 
         journey back in 2016 as an intern at Microsoft. I've since worked in various areas of the company, working on Big Data platforms 
-        for Azure, Python tools, Jupyter Notebooks, and now educational tools for teaching CS at GitHub. Over the past five years, I've 
-        had the opportunity to present at multiple conferences, lead a product from its inception to first 1000,000 users, and constantly 
-        learn and challenge myself.
+        for Azure, Python tools, and Jupyter Notebooks. I migrated over to GitHub in 2021 to work on educational tools for teaching CS with GitHub. Over the past five years, I've 
+        had the opportunity to present at numerous conferences, lead a product from its inception to first 1000,000 users, and constantly 
+        learn from those around me.
       </p>
     </div>
     <div class="tech">
@@ -23,7 +23,7 @@
       <i class="fas fa-mountain"></i>
       <i class="fas fa-gamepad"></i>
       <p>
-        Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. Getting outside with skiing, hiking, and soccer. Being creative with photography 
+        Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. Getting outside with skiing, hiking, and intramural soccer. Stretching my creativity with photography 
         and improv. And of course, getting Seattle-cultured by exploring breweries. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
         And finally, as a Cleveland native and UMich alum, I would be remiss if I didn't mention my love of the Cleveland Browns and Michigan football (Go Blue!).
       </p>
