--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -27,6 +27,7 @@
   p {
     margin-right: 5px;
   }
+  
 }
 
 .contents {
@@ -72,7 +73,7 @@
   display: inline-block;
   margin: 10px 0px;
   padding: 5px;
-  color: $main;
+  color: #b7a0de;
   background-color: transparent;
   border: 1px solid $main;
   border-radius: 10px;
