more link changes

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -27,7 +27,14 @@
   p {
     margin-right: 5px;
   }
-  
+  a {
+    color: $main;
+    &:hover{
+      color: $sec;
+    }
+    &:active {
+      color: $sec;
+    }
 }
 
 .contents {
