--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,7 @@
       <i class="fas fa-gamepad"></i>
       <p>
         Outside of work, I live in Seattle and love to do all the classic Pacific Northwest things. Getting outside with skiing, hiking, and intramural soccer. Stretching my creativity with photography 
-        and improv. And of course, getting Seattle-cultured by exploring breweries. I spend a lot of time with my Nintendo Switch, and stream on <a href="twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
+        and improv. And of course, getting Seattle-cultured by exploring breweries. I spend a lot of time with my Nintendo Switch, and stream on <a href="https://www.twitch.tv/baikat">Twitch</a>. I also foster dogs and cats, and am hoping to adopt one of my own this year!
         And finally, as a Cleveland native and UMich alum, I would be remiss if I didn't mention my love of the Cleveland Browns and Michigan football (Go Blue!).
       </p>
     </div>
